feat: consultas até 30

--- a/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
+++ b/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
        "<Graph identifier=N27507930809143259c430d58986854da (<class 'rdflib.graph.Graph'>)>"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,6 +517,16 @@
     "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPelaOrganizacao\"), URIRef(\"http://xmlns.com/foaf/0.1/Organization\")))\n",
     "# Relaciona a vacina antirrábica com a Pfizer-BioNTech\n",
     "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaAntirrabica\"), URIRef(\"http://xmlns.com/foaf/0.1/criadaPelaOrganizacao\"), URIRef(\"http://xmlns.com/foaf/0.1/Pfizer-BioNTech\")))\n",
+    "\n",
+    "# Cria a propriedade que relaciona a Person com o Group\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/Person\"), URIRef(\"http://xmlns.com/foaf/0.1/temGrupo\"), URIRef(\"http://xmlns.com/foaf/0.1/Group\")))\n",
+    "# Cria a propriedade que relaciona a Organization com o Group temMembro\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/Organization\"), URIRef(\"http://xmlns.com/foaf/0.1/temGrupo\"), URIRef(\"http://xmlns.com/foaf/0.1/Group\")))\n",
+    "\n",
+    "# Relaciona a Person Louis Pasteur com o Group Instituto Pasteur\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/LouisPasteur\"), URIRef(\"http://xmlns.com/foaf/0.1/temGrupo\"), URIRef(\"http://xmlns.com/foaf/0.1/InstitutoPasteur\")))\n",
+    "# Relaciona o Group Instituto Pasteur com a Person Louis Pasteur\n",
+    "onto.add((URIRef(\"http://xmlns.com/foaf/0.1/InstitutoPasteur\"), URIRef(\"http://xmlns.com/foaf/0.1/temMembro\"), URIRef(\"http://xmlns.com/foaf/0.1/LouisPasteur\")))\n",
     "\n",
     "# Cria a Person Jonas Salk\n",
     "onto.add((URIRef(\"http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#JonasSalk\"), RDF.type, URIRef(\"http://xmlns.com/foaf/0.1/Person\")))\n",
@@ -1040,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1062,10 @@
       "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#RabiesVirus'),)\n",
       "----------Consulta 22----------\n",
       "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#VacinaContraAPoliomielite'), rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#JonasSalk'))\n",
-      "----------Consulta 23----------\n"
+      "----------Consulta 23----------\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Tigre'),)\n",
+      "(rdflib.term.URIRef('http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#Leao'),)\n",
+      "----------Consulta 25----------\n"
      ]
     }
    ],
@@ -1126,6 +1139,109 @@
     "    print(row)\n",
     "\n",
     "print(\"----------Consulta 25----------\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/Person'),)\n",
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/Organization'),)\n",
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/LouisPasteur'),)\n",
+      "----------Consulta 26----------\n",
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/InstitutoPasteur'),)\n",
+      "----------Consulta 27----------\n",
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/InstitutoPasteur'),)\n",
+      "----------Consulta 28----------\n",
+      "(rdflib.term.URIRef('http://xmlns.com/foaf/0.1/InstitutoPasteur'), rdflib.term.URIRef('http://xmlns.com/foaf/0.1/LouisPasteur'))\n",
+      "----------Consulta 29----------\n",
+      "(rdflib.term.Literal('2', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#integer')),)\n",
+      "----------Consulta 30----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 26 - 30 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "\n",
+    "# 26 - Lista todos os membros de um grupo\n",
+    "query = \"\"\"\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT ?membro\n",
+    "WHERE {\n",
+    "    ?membro foaf:temGrupo ?grupo .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 26----------\")\n",
+    "\n",
+    "# 27 - Lista todos os grupos que tem um membro\n",
+    "query = \"\"\"\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT ?grupo\n",
+    "WHERE {\n",
+    "    ?grupo foaf:temMembro ?membro .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 27----------\")\n",
+    "\n",
+    "# 28 - Lista todos os grupos que tenha 1 membro ou mais\n",
+    "query = \"\"\"\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT ?grupo\n",
+    "WHERE {\n",
+    "    ?grupo foaf:temMembro ?membro .\n",
+    "}\n",
+    "GROUP BY ?grupo\n",
+    "HAVING (COUNT(?membro) >= 1)\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 28----------\")\n",
+    "\n",
+    "# 29 - Lista todos o grupos e membro que tenha 1 membro que tenha criado uma vacina\n",
+    "query = \"\"\"\n",
+    "PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
+    "SELECT ?grupo ?membro\n",
+    "WHERE {\n",
+    "    ?grupo foaf:temMembro ?membro .\n",
+    "    ?vacina foaf:criadaPeloGrupo ?grupo .\n",
+    "}\n",
+    "GROUP BY ?grupo ?membro\n",
+    "HAVING (COUNT(?membro) >= 1)\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 29----------\")\n",
+    "\n",
+    "# 30 - Printa a quantidade de virus que tem um sintoma\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT (COUNT(?virus) AS ?count)\n",
+    "WHERE {\n",
+    "    ?virus :temSintoma ?sintoma .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 30----------\")\n"
    ]
   }
  ],
