--- a/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
+++ b/Trabalho 1 - Ontologia/AlteracoesOntologiaParte3.ipynb
@@ -1243,6 +1243,39 @@
     "\n",
     "print(\"----------Consulta 30----------\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(rdflib.term.Literal('40364', datatype=rdflib.term.URIRef('http://www.w3.org/2001/XMLSchema#integer')),)\n",
+      "----------Consulta 31----------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 31 consultas SPARQL Query, usando a biblioteca rdflib\n",
+    "\n",
+    "# 31 - printa a quantidade de instancias de virus que são de uma classe que tem como superclasse a classe Viruses\n",
+    "\n",
+    "query = \"\"\"\n",
+    "PREFIX : <http://www.semanticweb.org/deivis/ontologies/2023/5/OntologiaVirus#>\n",
+    "SELECT (COUNT(?virus) AS ?count)\n",
+    "WHERE {\n",
+    "    ?virus a/rdfs:subClassOf* :Viruses .\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "for row in onto.query(query):\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"----------Consulta 31----------\")"
+   ]
   }
  ],
  "metadata": {
