feat: sem poda funcionando

--- a/Prova 1/Questao5.ipynb
+++ b/Prova 1/Questao5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -11,16 +11,17 @@
      "text": [
       "Valor: 1\n",
       "2\n",
-      "Quantidade de nos: 2\n",
-      "Palitos: 2 | Jogada: 1 | Jogador: 1\n",
-      "├── Palitos: 1 | Jogada: 0 | Jogador: 2\n",
-      "└── Palitos: 0 | Jogada: 0 | Jogador: 2\n",
+      "Quantidade de nos: 3\n",
+      "Palitos: 3 | Jogada: 2 | Jogador: 1\n",
+      "├── Palitos: 2 | Jogada: 1 | Jogador: 2\n",
+      "│   └── Palitos: 1 | Jogada: 0 | Jogador: 1\n",
+      "└── Palitos: 1 | Jogada: 0 | Jogador: 2\n",
       "╒═══════════════╤══════════╤═══════════╕\n",
-      "│   Num Palitos │ Jogada   │ Jogador   │\n",
+      "│   Num Palitos │   Jogada │ Jogador   │\n",
       "╞═══════════════╪══════════╪═══════════╡\n",
-      "│             2 │ -        │ MAX       │\n",
+      "│             3 │        2 │ MAX       │\n",
       "├───────────────┼──────────┼───────────┤\n",
-      "│             1 │ 1        │ MIN       │\n",
+      "│             1 │        0 │ MIN       │\n",
       "╘═══════════════╧══════════╧═══════════╛\n"
      ]
     }
@@ -53,10 +54,11 @@
     "    jogada = 0\n",
     "\n",
     "    # Construtor\n",
-    "    def __init__(self, palitos, jogador):\n",
+    "    def __init__(self, palitos, jogador, jogada = 0):\n",
     "        self.palitos = palitos\n",
     "        self.jogador = jogador\n",
     "        self.filhos = []\n",
+    "        self.jogada = jogada\n",
     "\n",
     "    # Retorna o numero de palitos\n",
     "    def getPalitos(self):\n",
@@ -83,7 +85,7 @@
     "        return self.jogada\n",
     "\n",
     "# Cria o estado inicial\n",
-    "estadoInicial = Estado(2, 1)\n",
+    "estadoInicial = Estado(3, 1)\n",
     "\n",
     "# Funcao Min Max\n",
     "def minMax(estado):\n",
@@ -107,10 +109,10 @@
     "            jogada = 0\n",
     "            # Para cada jogada possivel\n",
     "            for i in range(1, 4):\n",
-    "                if estado.getPalitos() - i < 0:\n",
+    "                if estado.getPalitos() - i < 1:\n",
     "                    break\n",
     "                # Cria o novo estado novo\n",
-    "                novoEstado = Estado(estado.getPalitos() - i, 2)\n",
+    "                novoEstado = Estado(estado.getPalitos() - i, 2, 0)\n",
     "                novoEstado.setPai(estado)\n",
     "                # Adiciona o filho\n",
     "                estado.addFilho(novoEstado)\n",
@@ -133,10 +135,10 @@
     "            jogada = 0\n",
     "            # Para cada jogada possivel\n",
     "            for i in range(1, 4):\n",
-    "                if estado.getPalitos() - i < 0:\n",
+    "                if estado.getPalitos() - i < 1:\n",
     "                    break\n",
     "                # Cria o novo estado\n",
-    "                novoEstado = Estado(estado.getPalitos() - i, 1)\n",
+    "                novoEstado = Estado(estado.getPalitos() - i, 1, 0)\n",
     "                novoEstado.setPai(estado)\n",
     "                # Adiciona o filho\n",
     "                estado.addFilho(novoEstado)\n",
@@ -193,10 +195,7 @@
     "# Percorre os pais\n",
     "while estado != None:\n",
     "    # Adiciona o estado na tabela\n",
-    "    if estado.pai != None:\n",
-    "        tabela.append([estado.getPalitos(), estado.pai.getPalitos() - estado.getPalitos(), \"MAX\" if estado.getJogador() == 1 else \"MIN\"])\n",
-    "    else:\n",
-    "        tabela.append([estado.getPalitos(), \"-\", \"MAX\" if estado.getJogador() == 1 else \"MIN\"])\n",
+    "    tabela.append([estado.getPalitos(), estado.getJogada(), \"MAX\" if estado.getJogador() == 1 else \"MIN\"])\n",
     "    # Atualiza o estado\n",
     "    estado = estado.pai\n",
     "\n",
