feat: mais alguns código de GridSearch

--- a/Hands-on-Machine/Cap-2/Housing.ipynb
+++ b/Hands-on-Machine/Cap-2/Housing.ipynb
@@ -1035,20 +1035,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18737.357653321284"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Random Forest Regressor\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
@@ -1066,11 +1055,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores: [51150.81743586 48946.33740931 46659.07391943 51759.43315985\n",
+      " 47332.24042505 51863.269674   52087.27493966 49816.19230251\n",
+      " 48792.09312891 54055.96152523]\n",
+      "Mean: 50246.26939198026\n",
+      "Standard deviation: 2213.0199159929225\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_scores(forest_rmse_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "#joblib.dump(my_model, \"my_model.pkl\")\n",
+    "#my_model_loaded = joblib.load(\"my_model.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_scores(forest_rmse)"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {\"n_estimators\": [3,10,30], 'max_features': [2,4,6,8]},\n",
+    "    {'bootstrap': [False], 'n_estimators': [3,10], 'max_features': [2,3,4]},\n",
+    "]\n",
+    "\n",
+    "forest_reg = RandomForestRegressor()\n",
+    "\n",
+    "grid_search = GridSearchCV(forest_reg, param_grid, cv=5, scoring='neg_mean_squared_error', return_train_score=True)\n",
+    "\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
    ]
   }
  ],
