feat: não lembro kkkkkkkk

--- a/Hands-on-Machine/Cap-2/Housing.ipynb
+++ b/Hands-on-Machine/Cap-2/Housing.ipynb
@@ -1088,9 +1088,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(),\n",
+       "             param_grid=[{'max_features': [2, 4, 6, 8],\n",
+       "                          'n_estimators': [3, 10, 30]},\n",
+       "                         {'bootstrap': [False], 'max_features': [2, 3, 4],\n",
+       "                          'n_estimators': [3, 10]}],\n",
+       "             return_train_score=True, scoring='neg_mean_squared_error')"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
@@ -1104,6 +1120,63 @@
     "grid_search = GridSearchCV(forest_reg, param_grid, cv=5, scoring='neg_mean_squared_error', return_train_score=True)\n",
     "\n",
     "grid_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestRegressor(max_features=6, n_estimators=30)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_\n",
+    "grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62996.376114767154 {'max_features': 2, 'n_estimators': 3}\n",
+      "55360.58249311887 {'max_features': 2, 'n_estimators': 10}\n",
+      "52689.61665909812 {'max_features': 2, 'n_estimators': 30}\n",
+      "59764.63156842791 {'max_features': 4, 'n_estimators': 3}\n",
+      "52949.99516765986 {'max_features': 4, 'n_estimators': 10}\n",
+      "50324.87974043071 {'max_features': 4, 'n_estimators': 30}\n",
+      "60064.22926607166 {'max_features': 6, 'n_estimators': 3}\n",
+      "51900.13141654745 {'max_features': 6, 'n_estimators': 10}\n",
+      "50015.57636434463 {'max_features': 6, 'n_estimators': 30}\n",
+      "59172.6885195259 {'max_features': 8, 'n_estimators': 3}\n",
+      "52428.07184618156 {'max_features': 8, 'n_estimators': 10}\n",
+      "50290.4954685945 {'max_features': 8, 'n_estimators': 30}\n",
+      "62455.83363561866 {'bootstrap': False, 'max_features': 2, 'n_estimators': 3}\n",
+      "53849.00227936929 {'bootstrap': False, 'max_features': 2, 'n_estimators': 10}\n",
+      "60634.90780135167 {'bootstrap': False, 'max_features': 3, 'n_estimators': 3}\n",
+      "52256.10311678557 {'bootstrap': False, 'max_features': 3, 'n_estimators': 10}\n",
+      "58821.070216446045 {'bootstrap': False, 'max_features': 4, 'n_estimators': 3}\n",
+      "51651.78370275052 {'bootstrap': False, 'max_features': 4, 'n_estimators': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cvres = grid_search.cv_results_\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
    ]
   }
  ],
