feat: alguns códigos a mais

--- a/Hands-on-Machine/Cap-2/Housing.ipynb
+++ b/Hands-on-Machine/Cap-2/Housing.ipynb
@@ -1178,6 +1178,69 @@
     "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
     "    print(np.sqrt(-mean_score), params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.61232958e-02, 7.42724338e-02, 4.10702874e-02, 1.80256413e-02,\n",
+       "       1.70217264e-02, 1.62051513e-02, 1.66281674e-02, 3.13081956e-01,\n",
+       "       5.59821751e-02, 1.10925329e-01, 8.29776062e-02, 1.08800215e-02,\n",
+       "       1.56773741e-01, 2.85767446e-05, 3.58136071e-03, 6.42252974e-03])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_importances = grid_search.best_estimator_.feature_importances_\n",
+    "feature_importances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0.313081956297002, 'median_income'),\n",
+       " (0.15677374145063366, 'INLAND'),\n",
+       " (0.11092532889260047, 'pop_per_hhold'),\n",
+       " (0.08297760615573721, 'bedrooms_per_room'),\n",
+       " (0.07612329577392536, 'longitude'),\n",
+       " (0.0742724337791428, 'latitude'),\n",
+       " (0.05598217514749927, 'rooms_per_hhold'),\n",
+       " (0.04107028739524525, 'housing_median_age'),\n",
+       " (0.018025641280080697, 'total_rooms'),\n",
+       " (0.017021726426494313, 'total_bedrooms'),\n",
+       " (0.016628167420344928, 'households'),\n",
+       " (0.016205151277204576, 'population'),\n",
+       " (0.010880021512651914, '<1H OCEAN'),\n",
+       " (0.006422529739984861, 'NEAR OCEAN'),\n",
+       " (0.003581360706804979, 'NEAR BAY'),\n",
+       " (2.8576744647726844e-05, 'ISLAND')]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "extra_attribs = [\"rooms_per_hhold\", \"pop_per_hhold\", \"bedrooms_per_room\"]\n",
+    "cat_encoder = full_pipeline.named_transformers_[\"cat\"]\n",
+    "cat_one_hot_Attribs = list(cat_encoder.categories_[0])\n",
+    "attributes = num_attribs + extra_attribs + cat_one_hot_Attribs\n",
+    "sorted(zip(feature_importances, attributes), reverse=True)"
+   ]
   }
  ],
  "metadata": {
