--- a/Hands-on-Machine/Cap-2/Housing.ipynb
+++ b/Hands-on-Machine/Cap-2/Housing.ipynb
@@ -1241,6 +1241,24 @@
     "attributes = num_attribs + extra_attribs + cat_one_hot_Attribs\n",
     "sorted(zip(feature_importances, attributes), reverse=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = grid_search.best_estimator_\n",
+    "\n",
+    "X_test = strat_test_set.drop(\"median_house_value\", axis=1)\n",
+    "Y_test = strat_test_set[\"median_house_value\"].copy()\n",
+    "\n",
+    "X_test_prepared = full_pipeline.transform(X_test)\n",
+    "final_predictions = final_model.predict(X_test_prepared)\n",
+    "\n",
+    "final_mse = mean_squared_error(Y_test, final_predictions)\n",
+    "final_rmse = np.sqrt(final_mse)"
+   ]
   }
  ],
  "metadata": {
