feat: exercicio 7 python usando regex

--- a/RedesNeurais/Python/ex7.ipynb
+++ b/RedesNeurais/Python/ex7.ipynb
@@ -2,12 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "def func(frase):\n",
     "    lista = frase.split()\n",
+    "    resposta = []\n",
+    "    for i in lista:\n",
+    "        if i[0].isupper():\n",
+    "            resposta.append(i)\n",
+    "    return resposta\n",
+    "\n",
+    "def func2(frase):\n",
+    "    lista = re.split(r\"[-;,.\\s]\\s*\", frase)\n",
     "    resposta = []\n",
     "    for i in lista:\n",
     "        if i[0].isupper():\n",
@@ -17,20 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Teste', 'Programa.wrwer']\n",
       "['Teste', 'Programa']\n"
      ]
     }
    ],
    "source": [
-    "frase = \"Teste de frase para testar no Programa\"\n",
-    "print(func(frase))"
+    "frase = \"Teste de frase para testar no Programa.wrwer\"\n",
+    "print(func(frase))\n",
+    "print(func2(frase))"
    ]
   }
  ],
