--- a/Curso Deep Learning Tensorflow/neurallearn.id.ipynb
+++ b/Curso Deep Learning Tensorflow/neurallearn.id.ipynb
@@ -622,6 +622,155 @@
     "tf.random.set_seed(5)\n",
     "print(tf.random.uniform(shape=[3,], maxval=5, dtype=tf.dtypes.int32, seed=10))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tensor e Variaveis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor([ 3  6  2  4  6 66  7], shape=(7,), dtype=int32)\n",
+      "tf.Tensor([3 6 2 4], shape=(4,), dtype=int32)\n",
+      "tf.Tensor([ 6  2  4  6 66], shape=(5,), dtype=int32)\n",
+      "tf.Tensor([ 6  4 66], shape=(3,), dtype=int32)\n",
+      "tf.Tensor([ 6  2  4  6 66  7], shape=(6,), dtype=int32)\n",
+      "tf.Tensor([3 6 2 4], shape=(4,), dtype=int32)\n",
+      "tf.Tensor([3 6], shape=(2,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor_indexed = tf.constant([3,6,2,4,6,66,7])\n",
+    "print(tensor_indexed)\n",
+    "print(tensor_indexed[0:4])\n",
+    "print(tensor_indexed[1:6])\n",
+    "print(tensor_indexed[1:6:2])\n",
+    "print(tensor_indexed[1:])\n",
+    "print(tensor_indexed[0:-3])\n",
+    "print(tensor_indexed[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([2, 3, 4, 5])>"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.range(2,6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(\n",
+      "[[1 2]\n",
+      " [3 5]\n",
+      " [1 5]], shape=(3, 2), dtype=int32)\n",
+      "tf.Tensor([1 3 1 2], shape=(4,), dtype=int32)\n",
+      "tf.Tensor([3 1], shape=(2,), dtype=int32)\n",
+      "tf.Tensor([2 5 5 3], shape=(4,), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor_two_d = tf.constant([\n",
+    "    [1,2,0],\n",
+    "    [3,5,-1],\n",
+    "    [1,5,6],\n",
+    "    [2,3,8]\n",
+    "])\n",
+    "\n",
+    "print(tensor_two_d[0:3, 0:2])\n",
+    "print(tensor_two_d[:, 0])\n",
+    "print(tensor_two_d[1:3, 0])\n",
+    "print(tensor_two_d[..., 1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(-1, shape=(), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[ 1  2  0]\n",
+      " [ 3  5 -1]], shape=(2, 3), dtype=int32)\n",
+      "tf.Tensor([ 0 -1], shape=(2,), dtype=int32)\n",
+      "tf.Tensor([ 0 -1], shape=(2,), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[ 0 -1]\n",
+      " [ 0  2]], shape=(2, 2), dtype=int32)\n",
+      "tf.Tensor(\n",
+      "[[ 0 -1]\n",
+      " [ 0  2]], shape=(2, 2), dtype=int32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tensor_three_d = tf.constant([\n",
+    "    [\n",
+    "        [1,2,0],\n",
+    "        [3,5,-1]\n",
+    "    ],\n",
+    "    [\n",
+    "        [10,2,0],\n",
+    "        [1,0,2]\n",
+    "    ],\n",
+    "    [\n",
+    "        [5,8,0],\n",
+    "        [2,7,0]\n",
+    "    ],\n",
+    "    [\n",
+    "        [2,1,9],\n",
+    "        [4,-3,32]\n",
+    "    ],\n",
+    "])\n",
+    "\n",
+    "print(tensor_three_d[0, 1, 2])\n",
+    "print(tensor_three_d[0,:,:])\n",
+    "print(tensor_three_d[0,:,-1])\n",
+    "print(tensor_three_d[0,:,2])\n",
+    "print(tensor_three_d[0:2,:,2])\n",
+    "print(tensor_three_d[0:2, ... ,2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Matemática"
+   ]
   }
  ],
  "metadata": {
