feat: enviado pacote arp

--- a/Curso Deep Learning Tensorflow/neurallearn.id.ipynb
+++ b/Curso Deep Learning Tensorflow/neurallearn.id.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "<tf.Tensor: shape=(), dtype=int32, numpy=3>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
        "<tf.Tensor: shape=(), dtype=int16, numpy=12>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -561,9 +561,9 @@
      "output_type": "stream",
      "text": [
       "tf.Tensor(\n",
-      "[[ 0.10873467 13.493889   -4.3196836 ]\n",
-      " [ 6.1347203   0.14664462  0.4594958 ]\n",
-      " [10.040816    9.382922   -5.25181   ]], shape=(3, 3), dtype=float32)\n"
+      "[[  2.1999197 -14.073696   -5.2097363]\n",
+      " [ -6.052006   -3.5548115 -12.773239 ]\n",
+      " [ -0.5342902 -13.59517    -7.804497 ]], shape=(3, 3), dtype=float32)\n"
      ]
     }
    ],
@@ -582,14 +582,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([46.069298 24.071379 11.163263 47.372303 39.434032], shape=(5,), dtype=float32)\n"
+      "tf.Tensor([43.448563 72.42401  59.116905 13.210688 53.985596], shape=(5,), dtype=float32)\n"
      ]
     }
    ],
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([2, 3, 4, 5])>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
